<resources>
    <string name="app_name">MenuDroid</string>
    <string name="title_activity_splash_screen">MenuDroid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="barcode_scan_title">Scan the barcode from table !</string>
    <string name="title_activity_menu">MenuActivity</string>

    <!--Main Screen Buttons-->
    <string name="btnOrder">Order</string>
    <string name="btnBill">Bill</string>
    <string name="btnWaiter">Waiter</string>
    <string name="btnMenu">Menu</string>
    <string name="btnContact">Contact</string>
    <string name="btnRestaurant">Test</string>
    <string name="btnLogin">Log in</string>


    <!--Order Screen -->
    <string name="title_activity_order">OrderActivity</string>


    <!--Barcode regiter info -->
    <string name="main_barcode_title">Barcode Read</string>
    <string name="main_barcode_message">Hello Dear Guest;\nYou need to register table, For register please read the barcode from app.\nFor continue press accept.</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <!-- -->

    <!--Set IP Dialog -->
    <string name="set_ip">Set Server Ip</string>
    <string name="set_ip_ok">OK</string>
    <string name="set_ip_cancel">CANCEL</string>
    <string name="enter_server_ip">Enter Server IP</string>

    <!--Menu Dialog-->
    <string name="main_menu_title">Order</string>
    <string name="main_menu_message">You should go menu</string>

    <!--Waiter Dialog-->
    <string name="main_waiter_title">Call Waiter</string>
    <string name="main_waiter_message">Are you sure you want to call waiter ?</string>

    <!--Bill Dialog-->
    <string name="main_bill_title">Bill</string>
    <string name="main_bill_message">Pay Bill\n
        order 1 price
        order 2 price
        order 3 price
        total price
    </string>
    <string name="main_bill_messageTotal">Pay Bill\ntotal price"</string>
    <string name="main_bill_pay">Pay</string>

    <!--Order Dialog-->
    <string name="main_order_title">Order</string>
    <string name="main_order_message">You ordered\n
    1 - Aybars\'s Special 5$\n
    2 - Rene\'s Special 5$\n
    3 - Drink 1 1$\n
    4 - Tarhana soup 2$\n\n
        total = 13$\n
    are you sure the ordered them</string>


    <!-- MenuActivity -->
    <string name="action_done">Done</string>
    <string name="action_info">Info</string>

    <!-- RestaurantActivity -->
    <string name="res_contact">Contact</string>
    <string name="res_events">Events</string>
    <string name="res_reservation">Reservation</string>
    <string name="res_work_time">Working Time</string>
    <string name="res_survey">Survey</string>
    <string name="res_gallery">Gallery</string>
    <string name="res_facebook">Facebook</string>
    <string name="res_twitter">Twitter</string>
    <string name="res_instagram">Instagram</string>
    <string name="res_foursquare">FourSquare</string>














    <!--Menu List Item-->
    <string name="list_breakfast">Breakfast</string>
    <string name="list_soup">Soup</string>
    <string name="list_pancake">Pancake</string>
    <string name="list_main_dish">Main Dish</string>
    <string name="list_desert">Desert</string>
    <string name="list_drinks">Drinks</string>

    <!--Food Items-->
    <!--Breakfast-->
    <string name="food_breakfast">Breakfast Plate</string>
    <string name="food_breakfast_ottoman">Ottoman Breakfast</string>

    <!--Soups-->
    <string name="food_tarhana_soup">Tarhana Soup</string>
    <string name="food_tarhana_soup_content">The cream of yogurt is blended with flour, spice, vegetables and got fermenteds</string>
    <string name="food_yayla_soup">Yayla Soup</string>
    <string name="food_yayla_soup_content">The rice is blended with yogurt is blended and pepper mint</string>
    <string name="food_akdene_soup">Akdene Soup</string>
    <string name="food_akdene_soup_content">The smashed barleycorns are cooked with yogurt and peppermint</string>
    <string name="food_keskek_soup">Keskek Soup</string>
    <string name="food_akdene_keskek_content">The peeled wheatcorns are boiled in hot water and blended milk and pepper </string>

    <!--Pancake-->
    <string name="food_meat_pancake">Meat Pancake</string>
    <string name="food_yogurt_pancake">Yogurt Pancake</string>
    <string name="food_cheese_pancake">Cheese Pancake</string>
    <string name="food_potatoes_pancake">Potatoes Pancake</string>
    <string name="food_spinach_pancake">spinach Pancake</string>

    <!--Main Dishes-->
    <string name="food_main_1">main 1</string>
    <string name="food_main_2">main 2</string>
    <string name="food_main_3">main 3</string>

    <!--Desert-->
    <string name="food_desert_1">desert 1</string>


    <!--Drinks-->
    <string name="food_drink_1">drink 1</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>


</resources>
