<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="menudroid.aybars.arslan.menudroid.main.MenuActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_info_outline_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_done"
        android:title="@string/action_done"
        android:orderInCategory="200"
        android:icon="@mipmap/ic_done_black_24dp"
        app:showAsAction="always" />
</menu>
