<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_activity_margin_eight"
        android:layout_marginRight="@dimen/main_activity_margin_eight"
        android:layout_above="@+id/ll12"
        android:layout_alignParentTop="true">


        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imgMain"
            android:src="@drawable/food_icon_real"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll12"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/ll2"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnOrder"
                android:drawableTop="@drawable/main_order"
                android:padding="@dimen/main_activity_margin_ten"
                android:textSize="@dimen/main_text_size"
                android:background="@drawable/main_custom_button"
                android:layout_weight="0.33"
                android:textColor="@drawable/main_custom_button_text_color"
                android:id="@+id/btnOrder" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnBill"
                android:drawableTop="@drawable/main_bill"
                android:padding="@dimen/main_activity_margin_ten"
                android:textSize="@dimen/main_text_size"
                android:background="@drawable/main_custom_button"
                android:layout_weight="0.33"
                android:layout_marginLeft="5.0dp"
                android:layout_marginRight="5.0dp"
                android:textColor="@drawable/main_custom_button_text_color"
                android:id="@+id/btnBill" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/main_custom_button"
                android:text="@string/btnWaiter"
                android:drawableTop="@drawable/main_waiter"
                android:padding="@dimen/main_activity_margin_ten"
                android:textSize="@dimen/main_text_size"
                android:layout_weight="0.33"
                android:textColor="@drawable/main_custom_button_text_color"
                android:id="@+id/btnWaiter" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_below="@id/ll2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnMenu"
                android:drawableTop="@drawable/main_menu"
                android:padding="@dimen/main_activity_margin_ten"
                android:textSize="@dimen/main_text_size"
                android:background="@drawable/main_custom_button"
                android:layout_weight="0.33"
                android:textColor="@drawable/main_custom_button_text_color"
                android:id="@+id/btnMenu" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnContact"
                android:drawableTop="@drawable/main_contact"
                android:padding="@dimen/main_activity_margin_ten"
                android:textSize="@dimen/main_text_size"
                android:background="@drawable/main_custom_button"
                android:layout_weight="0.33"
                android:layout_marginLeft="5.0dp"
                android:layout_marginRight="5.0dp"
                android:textColor="@drawable/main_custom_button_text_color"
                android:id="@+id/btnContact" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/main_custom_button"
                android:text="@string/btnRestaurant"
                android:drawableTop="@drawable/main_test"
                android:padding="@dimen/main_activity_margin_ten"
                android:textSize="@dimen/main_text_size"
                android:layout_weight="0.33"
                android:textColor="@drawable/main_custom_button_text_color"
                android:id="@+id/btnRestaurant" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>